--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
           <figure class="holding-page-animation">
             <img src="assets/temp/holding-page-animation.gif" alt="Portfolio Website Launching Soon" />
           </figure>
-          <h1 class="holding-page-title">Portfolio Launching Soon</h1>
+          <h1 class="holding-page-title">Caroline Zhang's portfolio coming soon</h1>
         </a>
       </div>
       <div class="holding-page-footer">
