--- a/work.html
+++ b/work.html
@@ -32,8 +32,7 @@
       </header>
       <div class="hero-headline-wrapper">
         <h1 class="stroke-shadow">
-          Hello, I'm a free portfolio template for creatives, graphic designers, illustrators, and interactive designers
-          to showcase their work!
+          Hello, I'm Caroline Zhang, a branding design student.
         </h1>
       </div>
       <footer class="hero-footer">
