changed floater and inserted links+bios
also changed body type font

--- a/work.html
+++ b/work.html
@@ -45,10 +45,10 @@
       <footer class="hero-footer">
         <ul class="hero-footer-navigation">
           <li>
-            <a href="#" class="custom-navigation">Instagram</a>
+            <a href="https://www.instagram.com/wiggggggggggle/?hl=en" class="custom-navigation">Instagram</a>
           </li>
           <li>
-            <a href="mailto:james@magnetude.com" class="custom-navigation">Email</a>
+            <a href="mailto:yuqizhang@my.capilanou.ca" class="custom-navigation">Email me!</a>
           </li>
         </ul>
       </footer>
@@ -154,8 +154,10 @@
           and optimize your page titles and descriptions for SEO!
         </p>
         <p>
-          Replace this text with your bio. Add social media links. Customize as desired. Then copy your completed footer
-          to the bottom of each page. Check out Easy First Steps on Notion for more.
+          Hi there, I’m Caroline, a graphic designer and overall big thinker based in Vancouver. Right now I’m a third year student in the IDEA School of Design with a focus on branding and a smattering of illustration. Research and analysis is where I feel at home—if you’ve got a question or a problem I’m your guy.
+
+          My interests are as vast and varied but my one true love is video games. I go from grinding at work to grinding levels virtually so efficiency is my key to success. I live next to computers so feel free to reach out and I’ll get back to you as soon as I can (after one more game). 
+          
         </p>
       </li>
       <li class="footer-item-2">
@@ -190,9 +192,9 @@
       <li class="footer-item-3">
         <h2>Contact &amp; Social</h2>
         <ul class="socials-list">
-          <li class="social-item"><a href="#">Insta</a></li>
-          <li class="social-item"><a href="#">LinkedIn</a></li>
-          <li class="social-item"><a href="#">Behance</a></li>
+          <li class="social-item"><a href="https://www.behance.net/wigggle">Behance</a></li>
+          <li class="social-item"><a href="https://www.instagram.com/wiggggggggggle/?hl=en">Instagram</a></li>
+          <li class="social-item"><a href="https://www.linkedin.com/in/wigggle/">LinkedIn</a></li>
         </ul>
       </li>
       <li class="footer-item-4">
@@ -210,7 +212,7 @@
     </div>
 
     <div class="flier">
-      <img src="assets/branding-images/smiley-face.svg" alt="Describe your image" />
+      <img src="assets/branding-images/floater.svg" alt="Describe your image" />
     </div>
 
     <script>
