--- a/work.html
+++ b/work.html
@@ -63,8 +63,8 @@
             </figure>
             <a href="project-1.html">
               <div class="overlay">
-                <h1 class="overlay-title">Text Overlay</h1>
-                <h4 class="overlay-description">Branding &amp; Illustration</h4>
+                <h1 class="overlay-title">Chinese national bag</h1>
+                <h4 class="overlay-description">Branding</h4>
               </div>
             </a>
           </li>
