--- a/work.html
+++ b/work.html
@@ -39,7 +39,7 @@
       </header>
       <div class="hero-headline-wrapper">
         <h1 class="stroke-shadow">
-          Hello, I'm Caroline Zhang, a branding design student.
+          Hi there. I'm Caroline Zhang, a branding design student.
         </h1>
       </div>
       <footer class="hero-footer">
@@ -90,41 +90,7 @@
               </div>
             </a>
           </li>
-          <li class="work-page-grid-item">
-            <figure>
-              <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/316293/phone.jpg" alt="Describe your project" />
-            </figure>
-            <a href="project-1.html">
-              <div class="overlay">
-                <h1 class="overlay-title">Text Overlay</h1>
-                <h4 class="overlay-description">Fine Art</h4>
-              </div>
-            </a>
-          </li>
-          <li class="work-page-grid-item">
-            <figure>
-              <img
-                src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/316293/pawel-czerwinski.jpg"
-                alt="Describe your project" />
-            </figure>
-            <a href="project-1.html">
-              <div class="overlay">
-                <h1 class="overlay-title">Text Overlay</h1>
-                <h4 class="overlay-description">Illustration</h4>
-              </div>
-            </a>
-          </li>
-          <li class="work-page-grid-item">
-            <figure>
-              <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/316293/phone.jpg" alt="Describe your project" />
-            </figure>
-            <a href="project-1.html">
-              <div class="overlay">
-                <h1 class="overlay-title">Text Overlay</h1>
-                <h4 class="overlay-description">Add Your Category</h4>
-              </div>
-            </a>
-          </li>
+          
         </ul>
       </section>
     </main>
