about page made

--- a/project-1.html
+++ b/project-1.html
@@ -15,7 +15,7 @@
   <body class="project-1">
     <header class="hero-header">
       <ul class="branding-navigation">
-        <li><a href="work.html" class="custom-navigation">Work</a></li>
+        <li class="project-nav"><a href="work.html" class="custom-navigation">Work</a></li>
         <li class="logo-on-white">
           <svg class="wordmark" xmlns="http://www.w3.org/2000/svg" version="1.1" viewBox="0 0 126.93 144.62">
               <!-- Generator: Adobe Illustrator 28.7.0, SVG Export Plug-In . SVG Version: 1.2.0 Build 136)  -->
