finished project 1 page

--- a/project-1.html
+++ b/project-1.html
@@ -34,21 +34,15 @@
     <div class="project-wrapper">
       <aside class="project-aside">
         <div class="project-info">
-          <h1 class="project-title">Chinese National Bag</h1>
+          <h1 class="project-title">Chinese National Bag Design</h1>
           <p class="project-description">
-            A brief description of your project goes here. The background colors are only to show you the
-            <em>.project-aside</em>
-            and
-            <em>.project-details</em>
-            boxes.
+           A luxury bag made to represent the nation of China, challenging the notion that "Made in China" means poor quality. The use of seal stamps and texture harken to the rich trade and art culture found in Chinese history. 
           </p>
           <p class="project-description">
-            This is a sticky sidebar (
-            <em>.project-aside</em>
-            ) so that your project title and description remain visible as you scroll down the page. To remove the
-            sticky sidebar, see
-            <em>Sidebar on Large Devices</em>
-            in style.css.
+            Originally seal stamps were a method for powerful people to sign off on documents. As this practice became more prevalant, art collectors would stamp pieces they procure. The number of stamps on a piece became a symbol of its value and artistic merit. 
+          </p>
+          <p class="project-description">
+            The characters making up the stamps represent the various Chinese dynasties. Each dynasty came with it's own set of innovations in both the art and technology fields. By combining the dynasty names with seal stamps, I wanted to redefine what "Made in China" really means.
           </p>
         </div>
         <ul class="project-navigation">
@@ -62,23 +56,18 @@
       </aside>
       <main class="project-details">
         <div class="project-image">
-          <img src="assets/project-1/birthday-1.png" width="800" height="800" alt="A description of the image" />
+          <img src="assets/images/caroline-zhang-chinese-national-luxury-bag-design.jpg" width="800" height="800" alt="A description of the image" />
         </div>
         <div class="project-image">
-          <img src="assets/project-1/birthday-2.png" width="800" height="800" alt="A description of the image" />
+          <img src="assets/images/caroline-zhang-design-packaging-national-bag-Dynasties-in-a-Bag-Front.jpg" width="600" height="1000" alt="A description of the image" />
         </div>
         <div class="project-image">
-          <img src="assets/project-1/birthday-3.png" width="800" height="800" alt="A description of the image" />
-        </div>
-        <div class="project-image-container">
-          <div class="project-image"><span class="large-emoji-placeholder">⭐️</span></div>
-          <div class="project-image"><span class="large-emoji-placeholder">🌸</span></div>
-        </div>
-        <div class="project-image"><span class="large-emoji-placeholder">🐙</span></div>
-        <div class="project-image-container">
-          <div class="project-image"><span class="large-emoji-placeholder">🔥</span></div>
-          <div class="project-image"><span class="large-emoji-placeholder">🥑</span></div>
-        </div>
+         <figure > 
+          <img src="assets/images/chinese-seal-stamps-horse-painting.jpg" width="800" height="800" alt="A description of the image" />
+          <figcaption class="caption">Night-Shining White by Han Gan (ca. 750) in the Met</figcaption>
+        </figure>
+         
+        
       </main>
     </div>
     <ul class="global-footer">
