fixed the header colours

--- a/project-1.html
+++ b/project-1.html
@@ -1,34 +1,61 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Free Creative Portfolio Template: Oct 2024 Version | Project Page</title>
+    <title>
+      Free Creative Portfolio Template: Oct 2024 Version | Project Page
+    </title>
     <meta
       name="description"
-      content="When writing a meta description, keep it between 140 and 160 characters so Google can display your entire message. Don’t forget to include your keyword!" />
+      content="When writing a meta description, keep it between 140 and 160 characters so Google can display your entire message. Don’t forget to include your keyword!"
+    />
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
+    />
     <link rel="stylesheet" href="./styles/style.css" />
   </head>
 
   <body class="project-1">
     <header class="hero-header">
       <ul class="branding-navigation">
-        <li class="project-nav"><a href="work.html" class="custom-navigation">Work</a></li>
+        <li class="project-nav">
+          <a href="work.html">Work</a>
+        </li>
         <li class="logo-on-white">
-          <svg class="wordmark" xmlns="http://www.w3.org/2000/svg" version="1.1" viewBox="0 0 126.93 144.62">
+          <a href="work.html">
+            <svg
+              class="wordmark"
+              xmlns="http://www.w3.org/2000/svg"
+              version="1.1"
+              viewBox="0 0 126.93 144.62"
+            >
               <!-- Generator: Adobe Illustrator 28.7.0, SVG Export Plug-In . SVG Version: 1.2.0 Build 136)  -->
               <g>
                 <g id="Layer_1">
-                  <path d="M90.01,89.63c-.94-1.93-1.69-2.85-1.58-5.05.13-2.57.46-5.14.72-7.7.47-4.6,1.63-9.59.87-14.16-2.93,1.26-5.95,3.07-9.01,3.94-3.01.86-3.34-1.29-.88-2.76,3.24-1.94,6.77-3.54,10.15-5.22,1.8-.89,6.49-4.43,7.74-1.62,1.01,2.25-1,6.68-1.52,8.93-.86,3.72-1.4,7.51-1.91,11.3-.41,3.08-1.93,6.81,2.26,4.78,3.19-1.54,6.47-3.81,10.03-4.08-1.78,3.47-4.11,5.35-7.63,6.95-3.17,1.44-6.04,3.42-9.23,4.68Z" />
-                  <path d="M0,6.54c1.43,8.26,1.85,16.48,2.21,24.86.34,7.86,1.04,15.6,1.96,23.4.11.92.22,1.85.15,2.78-.18,2.37-.59,4.2-.25,6.58.49,3.48.7,7.03.83,10.54.07,1.86.12,3.71.17,5.57.06,2.29.11,4.57.16,6.86s.11,4.57.17,6.85c.06,2.01.12,4.02.21,6.04.6,5.63.39,11.67-.12,17.43-.07,2.32-.15,4.64-.25,6.96-.16,3.92-.34,7.83-.43,11.75-.07,3.07-.31,5.76,2.95,6.91,5.89,2.09,12.99,1.44,19.14,1.46,7.1.03,14.18-.14,21.27-.46,14.01-.62,27.96-.97,41.99-.83,6.95.07,13.91.17,20.87.04,3.48-.07,6.81-.59,10.2-1.32,1.1-.24,4.28-.35,5.05-1.06.95-.88.61-2.02.57-3.29-.18-6.74-.44-13.48-.85-20.21-.19-3.07-.88-6.12-.63-9.19.12-1.54,1.43-4.77-1.46-4.04-1.68.63-4.43,3.03-6.2,4.44-5.01,3.9-10.7,5.27-16.78,6.67-4.41,1.03-8.99,1.77-13.53,1.42-13.53-1.04-23.86-13.69-27.67-25.77-3.91-12.39-5.83-26.46-.29-38.78,5.14-11.44,11.91-21.33,23.32-27.24,9.83-5.09,20.23,1.99,26.39,9.24,2.27,2.67,4.46,5.4,6.72,8.09,1.28,1.52,3.41,5.06,5.85,3.78,2.55-1.33,1.21-6.17,1.03-8.33-.27-3.21-.15-6.42-.19-9.64-.09-6.92-1.37-13.76-2.33-20.59-.24-1.72.1-3.07.1-3.72,0-.92.51-1.61,0-2.61-.88-1.73-6.21-.95-7.96-.96-1.65-.01-3.42.26-5.07.31-1.68.05-2.73.15-4.31.58-3.05.82-6.56.68-9.69.85-6.8.36-13.56.64-20.37.52-3.33-.06-6.64-.31-9.89.41-3.11.69-5.37.19-8.51.25-3.35.07-7.12.82-10.42,1.3-3.08.45-6.14.18-9.23.45-3.3.3-6.41.2-9.67.2s-6.62.06-9.97-.08c-3.49-.14-7.01-.15-10.48-.57C2.06,4.06.21,3.45.01,6.57v-.02Z" />
-                  <path d="M47.35,8.35c5.99-.3,11.85-1.53,17.8-2.16,6.53-.69,13.13-.61,19.68-.77,6.53-.16,13.02-.62,19.51-1.25,3.1-.3,6.2-.69,9.3-.93,2.23-.17,3.72-.33,4.26,2.17.54,2.51-.08,5.71-.08,8.27,0,2.88.31,5.72.63,8.58.33,2.94.5,5.89.64,8.84.14,2.97,1.05,7.17.07,9.98-2.35-1.78-3.54-4.99-5.58-7.14-2.11-2.22-4.42-4.47-6.76-6.45-4.96-4.22-12.16-6.21-18.6-6.17-5.95.04-11.7,5.4-16.38,8.71-5.56,3.94-8.22,8.5-11.67,14.16-14.11,23.16-7,59.29,17.94,72.31,6.54,3.41,15.62,3.11,22.73,1.87,3.84-.67,7.68-1.76,11.25-3.32,3.4-1.48,6.36-3.76,9.68-5.38,1.13,4.45,1.15,9.35,1.32,13.94.08,2.08.13,4.16.13,6.24,0,1.98.43,4.78.03,6.68-.63,2.95-3.92,2.68-6.32,2.72-5.22.09-10.44.13-15.66.19-9.64.11-19.52,1.06-29.11-.1-9.59-1.16-18.44-.18-28.09-.11-4.15.03-9.14.37-13.27.63-4.21.26-9.45.71-13.48-.72-2.77-.98-6.18-1.81-6.54-5.1-.4-3.66-.62-7.4-1.02-11.09-.96-8.9.29-18.35.36-27.31.08-9.37.23-18.73-.19-28.09-.48-10.66-2.7-21.07-3.28-31.73-.29-5.35-.56-10.68-1.17-16-.3-2.63-1.27-5.88-.98-8.51.27-2.5,2.08-2.32,4.29-2.55v-.15c12.83,0,25.73.38,38.54-.27Z" />
-                  <path d="M8.8,8.76c-2.21.23-4.02.05-4.29,2.55-.29,2.63.68,5.88.98,8.51.61,5.32.88,10.65,1.17,16,.58,10.66,2.81,21.06,3.28,31.73.42,9.36.26,18.73.19,28.09-.07,8.96-1.32,18.41-.36,27.31.4,3.69.61,7.43,1.02,11.09.36,3.29,3.77,4.12,6.54,5.1,4.03,1.43,9.52,1,13.73.74,4.14-.26,8.88,1.33,13.03,1.3,9.64-.07,20.12-.76,28.66,0,9.62.85,18.9-1.64,28.54-1.75,5.22-.06,10.44-.1,15.66-.19,2.4-.04,5.69.23,6.32-2.72.4-1.9-.03-4.7-.03-6.68,0-2.08-.05-4.16-.13-6.24-.17-4.58-.19-9.49-1.32-13.94-3.33,1.62-6.29,3.89-9.68,5.38-3.57,1.56-7.42,2.66-11.25,3.32-7.1,1.24-16.19,1.54-22.73-1.87-24.94-13.01-32.05-49.15-17.94-72.31,3.45-5.66,6.11-10.22,11.67-14.16,4.67-3.31,10.43-8.67,16.38-8.71,6.44-.04,13.65,1.95,18.6,6.17,2.33,1.99,4.65,4.23,6.76,6.45,2.04,2.15,3.23,5.36,5.58,7.14.97-2.81.06-7.01-.07-9.98-.14-2.95-.31-5.9-.64-8.84-.32-2.86-.63-5.69-.63-8.58,0-2.55.62-5.76.08-8.27-.54-2.5-2.03-2.34-4.26-2.17-3.1.24-6.2.63-9.3.93-6.5.63-12.99,1.09-19.51,1.25-6.55.16-13.16.09-19.68.77-5.95.63-11.81,1.85-17.8,2.16-12.81.65-25.72.27-38.54.27v.15Z" />
+                  <path
+                    d="M90.01,89.63c-.94-1.93-1.69-2.85-1.58-5.05.13-2.57.46-5.14.72-7.7.47-4.6,1.63-9.59.87-14.16-2.93,1.26-5.95,3.07-9.01,3.94-3.01.86-3.34-1.29-.88-2.76,3.24-1.94,6.77-3.54,10.15-5.22,1.8-.89,6.49-4.43,7.74-1.62,1.01,2.25-1,6.68-1.52,8.93-.86,3.72-1.4,7.51-1.91,11.3-.41,3.08-1.93,6.81,2.26,4.78,3.19-1.54,6.47-3.81,10.03-4.08-1.78,3.47-4.11,5.35-7.63,6.95-3.17,1.44-6.04,3.42-9.23,4.68Z"
+                  />
+                  <path
+                    d="M0,6.54c1.43,8.26,1.85,16.48,2.21,24.86.34,7.86,1.04,15.6,1.96,23.4.11.92.22,1.85.15,2.78-.18,2.37-.59,4.2-.25,6.58.49,3.48.7,7.03.83,10.54.07,1.86.12,3.71.17,5.57.06,2.29.11,4.57.16,6.86s.11,4.57.17,6.85c.06,2.01.12,4.02.21,6.04.6,5.63.39,11.67-.12,17.43-.07,2.32-.15,4.64-.25,6.96-.16,3.92-.34,7.83-.43,11.75-.07,3.07-.31,5.76,2.95,6.91,5.89,2.09,12.99,1.44,19.14,1.46,7.1.03,14.18-.14,21.27-.46,14.01-.62,27.96-.97,41.99-.83,6.95.07,13.91.17,20.87.04,3.48-.07,6.81-.59,10.2-1.32,1.1-.24,4.28-.35,5.05-1.06.95-.88.61-2.02.57-3.29-.18-6.74-.44-13.48-.85-20.21-.19-3.07-.88-6.12-.63-9.19.12-1.54,1.43-4.77-1.46-4.04-1.68.63-4.43,3.03-6.2,4.44-5.01,3.9-10.7,5.27-16.78,6.67-4.41,1.03-8.99,1.77-13.53,1.42-13.53-1.04-23.86-13.69-27.67-25.77-3.91-12.39-5.83-26.46-.29-38.78,5.14-11.44,11.91-21.33,23.32-27.24,9.83-5.09,20.23,1.99,26.39,9.24,2.27,2.67,4.46,5.4,6.72,8.09,1.28,1.52,3.41,5.06,5.85,3.78,2.55-1.33,1.21-6.17,1.03-8.33-.27-3.21-.15-6.42-.19-9.64-.09-6.92-1.37-13.76-2.33-20.59-.24-1.72.1-3.07.1-3.72,0-.92.51-1.61,0-2.61-.88-1.73-6.21-.95-7.96-.96-1.65-.01-3.42.26-5.07.31-1.68.05-2.73.15-4.31.58-3.05.82-6.56.68-9.69.85-6.8.36-13.56.64-20.37.52-3.33-.06-6.64-.31-9.89.41-3.11.69-5.37.19-8.51.25-3.35.07-7.12.82-10.42,1.3-3.08.45-6.14.18-9.23.45-3.3.3-6.41.2-9.67.2s-6.62.06-9.97-.08c-3.49-.14-7.01-.15-10.48-.57C2.06,4.06.21,3.45.01,6.57v-.02Z"
+                  />
+                  <path
+                    d="M47.35,8.35c5.99-.3,11.85-1.53,17.8-2.16,6.53-.69,13.13-.61,19.68-.77,6.53-.16,13.02-.62,19.51-1.25,3.1-.3,6.2-.69,9.3-.93,2.23-.17,3.72-.33,4.26,2.17.54,2.51-.08,5.71-.08,8.27,0,2.88.31,5.72.63,8.58.33,2.94.5,5.89.64,8.84.14,2.97,1.05,7.17.07,9.98-2.35-1.78-3.54-4.99-5.58-7.14-2.11-2.22-4.42-4.47-6.76-6.45-4.96-4.22-12.16-6.21-18.6-6.17-5.95.04-11.7,5.4-16.38,8.71-5.56,3.94-8.22,8.5-11.67,14.16-14.11,23.16-7,59.29,17.94,72.31,6.54,3.41,15.62,3.11,22.73,1.87,3.84-.67,7.68-1.76,11.25-3.32,3.4-1.48,6.36-3.76,9.68-5.38,1.13,4.45,1.15,9.35,1.32,13.94.08,2.08.13,4.16.13,6.24,0,1.98.43,4.78.03,6.68-.63,2.95-3.92,2.68-6.32,2.72-5.22.09-10.44.13-15.66.19-9.64.11-19.52,1.06-29.11-.1-9.59-1.16-18.44-.18-28.09-.11-4.15.03-9.14.37-13.27.63-4.21.26-9.45.71-13.48-.72-2.77-.98-6.18-1.81-6.54-5.1-.4-3.66-.62-7.4-1.02-11.09-.96-8.9.29-18.35.36-27.31.08-9.37.23-18.73-.19-28.09-.48-10.66-2.7-21.07-3.28-31.73-.29-5.35-.56-10.68-1.17-16-.3-2.63-1.27-5.88-.98-8.51.27-2.5,2.08-2.32,4.29-2.55v-.15c12.83,0,25.73.38,38.54-.27Z"
+                  />
+                  <path
+                    d="M8.8,8.76c-2.21.23-4.02.05-4.29,2.55-.29,2.63.68,5.88.98,8.51.61,5.32.88,10.65,1.17,16,.58,10.66,2.81,21.06,3.28,31.73.42,9.36.26,18.73.19,28.09-.07,8.96-1.32,18.41-.36,27.31.4,3.69.61,7.43,1.02,11.09.36,3.29,3.77,4.12,6.54,5.1,4.03,1.43,9.52,1,13.73.74,4.14-.26,8.88,1.33,13.03,1.3,9.64-.07,20.12-.76,28.66,0,9.62.85,18.9-1.64,28.54-1.75,5.22-.06,10.44-.1,15.66-.19,2.4-.04,5.69.23,6.32-2.72.4-1.9-.03-4.7-.03-6.68,0-2.08-.05-4.16-.13-6.24-.17-4.58-.19-9.49-1.32-13.94-3.33,1.62-6.29,3.89-9.68,5.38-3.57,1.56-7.42,2.66-11.25,3.32-7.1,1.24-16.19,1.54-22.73-1.87-24.94-13.01-32.05-49.15-17.94-72.31,3.45-5.66,6.11-10.22,11.67-14.16,4.67-3.31,10.43-8.67,16.38-8.71,6.44-.04,13.65,1.95,18.6,6.17,2.33,1.99,4.65,4.23,6.76,6.45,2.04,2.15,3.23,5.36,5.58,7.14.97-2.81.06-7.01-.07-9.98-.14-2.95-.31-5.9-.64-8.84-.32-2.86-.63-5.69-.63-8.58,0-2.55.62-5.76.08-8.27-.54-2.5-2.03-2.34-4.26-2.17-3.1.24-6.2.63-9.3.93-6.5.63-12.99,1.09-19.51,1.25-6.55.16-13.16.09-19.68.77-5.95.63-11.81,1.85-17.8,2.16-12.81.65-25.72.27-38.54.27v.15Z"
+                  />
                 </g>
               </g>
+            </svg>
+          </a>
         </li>
-        <li><a href="about.html" class="custom-navigation">About</a></li>
+        <li><a href="about.html">About</a></li>
       </ul>
     </header>
     <div class="project-wrapper">
@@ -36,57 +63,98 @@
         <div class="project-info">
           <h1 class="project-title">Chinese National Bag Design</h1>
           <p class="project-description">
-           A luxury bag made to represent the nation of China, challenging the notion that "Made in China" means poor quality. The use of seal stamps and texture harken to the rich trade and art culture found in Chinese history. 
+            A luxury bag made to represent the nation of China, challenging the
+            notion that "Made in China" means poor quality. The use of seal
+            stamps and texture harken to the rich trade and art culture found in
+            Chinese history.
           </p>
           <p class="project-description">
-            Originally seal stamps were a method for powerful people to sign off on documents. As this practice became more prevalant, art collectors would stamp pieces they procure. The number of stamps on a piece became a symbol of its value and artistic merit. 
+            Originally seal stamps were a method for powerful people to sign off
+            on documents. As this practice became more prevalant, art collectors
+            would stamp pieces they procure. The number of stamps on a piece
+            became a symbol of its value and artistic merit.
           </p>
           <p class="project-description">
-            The characters making up the stamps represent the various Chinese dynasties. Each dynasty came with it's own set of innovations in both the art and technology fields. By combining the dynasty names with seal stamps, I wanted to redefine what "Made in China" really means.
+            The characters making up the stamps represent the various Chinese
+            dynasties. Each dynasty came with it's own set of innovations in
+            both the art and technology fields. By combining the dynasty names
+            with seal stamps, I wanted to redefine what "Made in China" really
+            means.
           </p>
         </div>
         <ul class="project-navigation">
           <li class="arrow">
-            <a href="#" class="navigation-arrow"><i class="fas fa-arrow-left fa-2x"></i></a>
+            <a href="#" class="navigation-arrow"
+              ><i class="fas fa-arrow-left fa-2x"></i
+            ></a>
           </li>
           <li class="arrow">
-            <a href="project-2.html" class="navigation-arrow"><i class="fas fa-arrow-right fa-2x"></i></a>
+            <a href="project-2.html" class="navigation-arrow"
+              ><i class="fas fa-arrow-right fa-2x"></i
+            ></a>
           </li>
         </ul>
       </aside>
       <main class="project-details">
         <div class="project-image">
-          <img src="assets/images/caroline-zhang-chinese-national-luxury-bag-design.jpg" width="800" height="800" alt="A description of the image" />
+          <img
+            src="assets/images/caroline-zhang-chinese-national-luxury-bag-design.jpg"
+            width="1000"
+            height="1000"
+            alt="A description of the image"
+          />
         </div>
         <div class="project-image">
-          <img src="assets/images/caroline-zhang-design-packaging-national-bag-Dynasties-in-a-Bag-Front.jpg" width="600" height="1000" alt="A description of the image" />
+          <img
+            src="assets/images/caroline-zhang-design-packaging-national-bag-Dynasties-in-a-Bag-Front.jpg"
+            width="600"
+            height="1000"
+            alt="A description of the image"
+          />
         </div>
         <div class="project-image">
-         <figure > 
-          <img src="assets/images/chinese-seal-stamps-horse-painting.jpg" width="800" height="800" alt="A description of the image" />
-          <figcaption class="caption">Night-Shining White by Han Gan (ca. 750) in the Met</figcaption>
-        </figure>
-         
-        
+          <figure>
+            <img
+              src="assets/images/chinese-seal-stamps-horse-painting.jpg"
+              width="800"
+              height="800"
+              alt="A description of the image"
+            />
+            <figcaption class="caption">
+              Night-Shining White by Han Gan (ca. 750) in the Met
+            </figcaption>
+          </figure>
+        </div>
       </main>
     </div>
     <ul class="global-footer">
       <li class="footer-item-1">
         <h2>About Me</h2>
         <p>
-          A highly customizable portfolio starter template with a big hero for your branding and intro. The work page is
-          based on
-          <a href="https://css-tricks.com/snippets/css/complete-guide-grid/" target="_blank">CSS Grid</a>
-          . The project page has a sticky sidebar. Beginngers can add their own logo,
-          <a href="https://fonts.google.com/" target="_blank">custom typography</a>
+          A highly customizable portfolio starter template with a big hero for
+          your branding and intro. The work page is based on
+          <a
+            href="https://css-tricks.com/snippets/css/complete-guide-grid/"
+            target="_blank"
+            >CSS Grid</a
+          >
+          . The project page has a sticky sidebar. Beginngers can add their own
+          logo,
+          <a href="https://fonts.google.com/" target="_blank"
+            >custom typography</a
+          >
           , custom colours, custom hover states, custom cursor, and more.
         </p>
         <p>
-          Customize the hero and footer. Make something randomly fly across the screen! Experiment with
-          <a href="https://mycolor.space/gradient" target="_blank">animated gradients</a>
+          Customize the hero and footer. Make something randomly fly across the
+          screen! Experiment with
+          <a href="https://mycolor.space/gradient" target="_blank"
+            >animated gradients</a
+          >
           , animated GIFs, and
           <a href="https://www.svgator.com/" target="_blank">animated SVGs</a>
-          ! Add your own typewriter effect, parallax effect or custom effects and easter eggs! Consider adding a
+          ! Add your own typewriter effect, parallax effect or custom effects
+          and easter eggs! Consider adding a
           <a href="play.html">Play</a>
           page or
           <a href="resume.html">resume</a>
@@ -106,11 +174,23 @@
         <ul class="footer-nav-list">
           <li class="footer-nav-item"><a href="index.html">Holding Page</a></li>
           <li class="footer-nav-item"><a href="work.html">Work Page</a></li>
-          <li class="footer-nav-item"><a href="work-clean.html">Work Page (Clean Version)</a></li>
-          <li class="footer-nav-item"><a href="work-clean-flier.html">Work Page (Clean Version with Flier)</a></li>
-          <li class="footer-nav-item"><a href="work-grayscale.html">Work Page (Grayscale Filter)</a></li>
-          <li class="footer-nav-item"><a href="work-ghost.html">Work Page (Ghost Flying Icon)</a></li>
-          <li class="footer-nav-item"><a href="project-1.html">Project Page</a></li>
+          <li class="footer-nav-item">
+            <a href="work-clean.html">Work Page (Clean Version)</a>
+          </li>
+          <li class="footer-nav-item">
+            <a href="work-clean-flier.html"
+              >Work Page (Clean Version with Flier)</a
+            >
+          </li>
+          <li class="footer-nav-item">
+            <a href="work-grayscale.html">Work Page (Grayscale Filter)</a>
+          </li>
+          <li class="footer-nav-item">
+            <a href="work-ghost.html">Work Page (Ghost Flying Icon)</a>
+          </li>
+          <li class="footer-nav-item">
+            <a href="project-1.html">Project Page</a>
+          </li>
           <li class="footer-nav-item"><a href="about.html">About</a></li>
         </ul>
       </li>
@@ -131,7 +211,9 @@
         </p>
       </li>
     </ul>
-    <div id="myID" class="bottomMenu hide"><a href="project-2.html">Next Project</a></div>
+    <div id="myID" class="bottomMenu hide">
+      <a href="project-2.html">Next Project</a>
+    </div>
 
     <script>
       myID = document.getElementById("myID");
