fixed image sizes for optimization

--- a/about.html
+++ b/about.html
@@ -62,6 +62,7 @@
           <img
             src="assets/images/Caroline-Zhang-Self-Portrait-illustration.jpg"
             width="800"
+            height="1093"
             alt="Your Photo"
           />
         </div>
@@ -80,7 +81,7 @@
           you as soon as I can (after one more game).
         </p>
         <h3>Testimonials</h3>
-        <p>"they're pretty cool"</p>
+        <p>"they're pretty cool i guess"</p>
       </li>
       <li class="about-item-3">
         <h2>Contact &amp; Social</h2>
@@ -101,7 +102,6 @@
         </ul>
       </li>
       <li class="about-item-4">
-        <p><a href="#top">Smooth scroll to the top</a></p>
         <p class="fineprint">
           &copy; 2020-2024. Hand crafted with
           <span class="heart">❤</span>
