--- a/index.html
+++ b/index.html
@@ -4,13 +4,20 @@
     <title>Free Creative Portfolio Template: Holding Page</title>
     <meta
       name="description"
-      content="When writing a meta description, keep it between 140 and 160 characters so Google can display your entire message. Don’t forget to include your keyword!" />
+      content="When writing a meta description, keep it between 140 and 160 characters so Google can display your entire message. Don’t forget to include your keyword!"
+    />
     <meta charset="utf-8" />
     <meta http-equiv="refresh" content="5; url=work.html" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta property="og:image" content="screenshot.jpg" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css" />
-    <script src="https://kit.fontawesome.com/d300c2ea15.js" crossorigin="anonymous"></script>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css"
+    />
+    <script
+      src="https://kit.fontawesome.com/d300c2ea15.js"
+      crossorigin="anonymous"
+    ></script>
     <link rel="stylesheet" href="./styles/style.css" />
   </head>
   <body class="holding-page">
@@ -18,9 +25,14 @@
       <div class="holding-page-inner-container">
         <a href="work.html">
           <figure class="holding-page-animation">
-            <img src="assets/temp/holding-page-animation.gif" alt="Portfolio Website Launching Soon" />
+            <img
+              src="assets/images/swadloon.gif"
+              alt="Portfolio Website Launching Soon"
+            />
           </figure>
-          <h1 class="holding-page-title">Caroline Zhang's portfolio coming soon</h1>
+          <h1 class="holding-page-title">
+            Caroline Zhang's portfolio incoming
+          </h1>
         </a>
       </div>
       <div class="holding-page-footer">
