--- a/about.html
+++ b/about.html
@@ -1,12 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>
-      Free Creative Portfolio Template: Oct 2024 Version | About Page
-    </title>
+    <title>Caroline Zhang // Design Portfolio</title>
     <meta
       name="description"
-      content="When writing a meta description, keep it between 140 and 160 characters so Google can display your entire message. Don’t forget to include your keyword!"
+      content="Work portfolio for Vancouver-based graphic design student Caroline Zhang featuring branding and illustration pieces."
     />
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -81,16 +79,14 @@
           you as soon as I can (after one more game).
         </p>
         <h3>Testimonials</h3>
-        <p>"they're pretty cool i guess"</p>
+        <p>"One of the greatest minds I know."</p>
       </li>
       <li class="about-item-3">
         <h2>Contact &amp; Social</h2>
         <ul class="socials-list">
           <li class="social-item">
-            <a
-              href="https://www.instagram.com/wiggggggggggle/?hl=en"
-              class="custom-navigation"
-              >Insta</a
+            <a href="https://www.instagram.com/wiggggggggggle/?hl=en"
+              >Instagram</a
             >
           </li>
           <li class="social-item">
@@ -99,13 +95,14 @@
           <li class="social-item">
             <a href="https://www.behance.net/wigggle">Behance</a>
           </li>
+          <li class="social-item">
+            <a href="mailto:yuqizhang@my.capilanou.ca">hit me up!</a>
+          </li>
         </ul>
       </li>
       <li class="about-item-4">
         <p class="fineprint">
-          &copy; 2020-2024. Hand crafted with
-          <span class="heart">❤</span>
-          by James Neufeld.
+          &copy; 2024-2026. Coded frantically by yours truly.
         </p>
       </li>
     </ul>
@@ -113,7 +110,7 @@
       <ul class="hero-footer-navigation">
         <li><a href="#" class="custom-navigation">Instagram</a></li>
         <li>
-          <a href="mailto:james@magnetude.com" class="custom-navigation"
+          <a href="mailto:yuqizhang@my.capilanou.ca" class="custom-navigation"
             >Email</a
           >
         </li>
