--- a/project-1.html
+++ b/project-1.html
@@ -1,12 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>
-      Free Creative Portfolio Template: Oct 2024 Version | Project Page
-    </title>
+    <title>Caroline Zhang // Design Portfolio</title>
     <meta
       name="description"
-      content="When writing a meta description, keep it between 140 and 160 characters so Google can display your entire message. Don’t forget to include your keyword!"
+      content="Work portfolio for Vancouver-based graphic design student Caroline Zhang featuring branding and illustration pieces."
     />
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -131,83 +129,67 @@
       <li class="footer-item-1">
         <h2>About Me</h2>
         <p>
-          A highly customizable portfolio starter template with a big hero for
-          your branding and intro. The work page is based on
-          <a
-            href="https://css-tricks.com/snippets/css/complete-guide-grid/"
-            target="_blank"
-            >CSS Grid</a
-          >
-          . The project page has a sticky sidebar. Beginngers can add their own
-          logo,
-          <a href="https://fonts.google.com/" target="_blank"
-            >custom typography</a
-          >
-          , custom colours, custom hover states, custom cursor, and more.
-        </p>
-        <p>
-          Customize the hero and footer. Make something randomly fly across the
-          screen! Experiment with
-          <a href="https://mycolor.space/gradient" target="_blank"
-            >animated gradients</a
-          >
-          , animated GIFs, and
-          <a href="https://www.svgator.com/" target="_blank">animated SVGs</a>
-          ! Add your own typewriter effect, parallax effect or custom effects
-          and easter eggs! Consider adding a
-          <a href="play.html">Play</a>
-          page or
-          <a href="resume.html">resume</a>
-          . Don't forget to customize your
-          <a href="404.html">404 Error Page</a>
-          and optimize your page titles and descriptions for SEO!
+          Hi there, I’m Caroline, a graphic designer and overall big thinker
+          based in Vancouver. Right now I’m a third year student in the IDEA
+          School of Design with a focus on branding and a smattering of
+          illustration. Research and analysis is where I feel at home—if you’ve
+          got a question or a problem I’m your guy. My interests are as vast and
+          varied but my one true love is video games. I go from grinding at work
+          to grinding levels virtually so efficiency is my key to success. I
+          live next to computers so feel free to reach out and I’ll get back to
+          you as soon as I can (after one more game).
         </p>
       </li>
       <li class="footer-item-2">
         <h2>Awards &amp; Recognition</h2>
         <ul class="awards-list">
-          <li class="award-item"><a href="#">Award goes here</a></li>
-          <li class="award-item"><a href="#">Recognition goes here</a></li>
-          <li class="award-item"><a href="#">Award goes here</a></li>
+          <li class="award-item">
+            <p>
+              <a
+                href="https://rgd.ca/hiring-designers/award-winners/rgd-student-awards-past-winners"
+                >RGD's 2023 Student Awards Honourable Mentions in packaging and
+                1st year student categories</a
+              >
+            </p>
+          </li>
         </ul>
+
         <h2>Selected Works</h2>
         <ul class="footer-nav-list">
-          <li class="footer-nav-item"><a href="index.html">Holding Page</a></li>
-          <li class="footer-nav-item"><a href="work.html">Work Page</a></li>
           <li class="footer-nav-item">
-            <a href="work-clean.html">Work Page (Clean Version)</a>
+            <a href="project-1.html">Chinese national bag design</a>
           </li>
           <li class="footer-nav-item">
-            <a href="work-clean-flier.html"
-              >Work Page (Clean Version with Flier)</a
-            >
+            <a href="project-2.html">Queue branding and packaging</a>
           </li>
           <li class="footer-nav-item">
-            <a href="work-grayscale.html">Work Page (Grayscale Filter)</a>
+            <a href="project-3.html">Bo-cha beverage branding and packaging</a>
           </li>
-          <li class="footer-nav-item">
-            <a href="work-ghost.html">Work Page (Ghost Flying Icon)</a>
-          </li>
-          <li class="footer-nav-item">
-            <a href="project-1.html">Project Page</a>
-          </li>
-          <li class="footer-nav-item"><a href="about.html">About</a></li>
         </ul>
       </li>
       <li class="footer-item-3">
         <h2>Contact &amp; Social</h2>
         <ul class="socials-list">
-          <li class="social-item"><a href="#">Insta</a></li>
-          <li class="social-item"><a href="#">LinkedIn</a></li>
-          <li class="social-item"><a href="#">Behance</a></li>
+          <li class="social-item">
+            <a href="https://www.behance.net/wigggle">Behance</a>
+          </li>
+          <li class="social-item">
+            <a href="https://www.instagram.com/wiggggggggggle/?hl=en"
+              >Instagram</a
+            >
+          </li>
+          <li class="social-item">
+            <a href="https://www.linkedin.com/in/wigggle/">LinkedIn</a>
+          </li>
+          <li class="social-item">
+            <a href="mailto:yuqizhang@my.capilanou.ca">hit me up!</a>
+          </li>
         </ul>
       </li>
       <li class="footer-item-4">
         <p><a href="#top">Smooth scroll to the top</a></p>
         <p class="fineprint">
-          &copy; 2020-2024. Hand crafted with
-          <span class="heart">❤</span>
-          by James Neufeld.
+          &copy; 2024-2026. Coded frantically by yours truly.
         </p>
       </li>
     </ul>
