--- a/work.html
+++ b/work.html
@@ -1,12 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>
-      Free Creative Portfolio Template: Oct 2024 Version | Work Page
-    </title>
+    <title>Caroline Zhang // Design Portfolio</title>
     <meta
       name="description"
-      content="When writing a meta description, keep it between 140 and 160 characters so Google can display your entire message. Don’t forget to include your keyword!"
+      content="Work portfolio for Vancouver-based graphic design student Caroline Zhang featuring branding and illustration pieces."
     />
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -150,32 +148,27 @@
         <h2>Awards &amp; Recognition</h2>
         <ul class="awards-list">
           <li class="award-item">
-            <p>RGD's 2023 Student Awards Honourable Mention</p>
+            <p>
+              <a
+                href="https://rgd.ca/hiring-designers/award-winners/rgd-student-awards-past-winners"
+                >RGD's 2023 Student Awards Honourable Mentions in packaging and
+                1st year student categories</a
+              >
+            </p>
           </li>
         </ul>
 
         <h2>Selected Works</h2>
         <ul class="footer-nav-list">
-          <li class="footer-nav-item"><a href="index.html">Holding Page</a></li>
-          <li class="footer-nav-item"><a href="work.html">Work Page</a></li>
           <li class="footer-nav-item">
-            <a href="work-clean.html">Work Page (Clean Version)</a>
+            <a href="project-1.html">Chinese national bag design</a>
           </li>
           <li class="footer-nav-item">
-            <a href="work-clean-flier.html"
-              >Work Page (Clean Version with Flier)</a
-            >
+            <a href="project-2.html">Queue branding and packaging</a>
           </li>
           <li class="footer-nav-item">
-            <a href="work-grayscale.html">Work Page (Grayscale Filter)</a>
+            <a href="project-3.html">Bo-cha beverage branding and packaging</a>
           </li>
-          <li class="footer-nav-item">
-            <a href="work-ghost.html">Work Page (Ghost Flying Icon)</a>
-          </li>
-          <li class="footer-nav-item">
-            <a href="project-1.html">Project Page</a>
-          </li>
-          <li class="footer-nav-item"><a href="about.html">About</a></li>
         </ul>
       </li>
       <li class="footer-item-3">
@@ -192,14 +185,15 @@
           <li class="social-item">
             <a href="https://www.linkedin.com/in/wigggle/">LinkedIn</a>
           </li>
+          <li class="social-item">
+            <a href="mailto:yuqizhang@my.capilanou.ca">hit me up!</a>
+          </li>
         </ul>
       </li>
       <li class="footer-item-4">
         <p><a href="#top">Smooth scroll to the top</a></p>
         <p class="fineprint">
-          &copy; 2024-2026. Hand crafted with
-          <span class="heart">❤</span>
-          by James Neufeld.
+          &copy; 2024-2026. Coded frantically by yours truly.
         </p>
       </li>
     </ul>
