--- a/404.html
+++ b/404.html
@@ -1,12 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>
-      Free Creative Portfolio Template: Oct 2024 Version | Error Page
-    </title>
+    <title>Caroline Zhang // Design Portfolio</title>
+    <link rel="icon" type="image/x-icon" href="assets/images/favicon.png" />
     <meta
       name="description"
-      content="When writing a meta description, keep it between 140 and 160 characters so Google can display your entire message. Don’t forget to include your keyword!"
+      content="Work portfolio for Vancouver-based graphic design student Caroline Zhang featuring branding and illustration pieces."
     />
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -75,22 +74,11 @@
         </ul>
       </header>
       <div class="hero-headline-wrapper">
-        <h1 class="error-page-title">404 File Not Found</h1>
-        <h2>Create a custom error page that matches your personal brand.</h2>
-        <p>
-          The best 404 pages have become an art in themselves. Clever 404 pages
-          almost act like Easter eggs &mdash; hidden treats buried in a site
-          &mdash; and that feeling of having found something unique can overcome
-          the user's frustration of not getting to the page they wanted.
-        </p>
-        <p>
-          See:
-          <a
-            href="https://www.creativebloq.com/web-design/best-404-pages-812505"
-          >
-            The best 404 pages for clever web design inspiration
-          </a>
-        </p>
+        <h1 class="error-page-title">My bad. I dropped something.</h1>
+        <h2 class="error-page-subhead">
+          The page you're looking for doesn't or never existed. Let's get back
+          <a href="work.html">home</a>
+        </h2>
       </div>
       <footer class="hero-footer"></footer>
     </section>
