--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Free Creative Portfolio Template: Holding Page</title>
+    <title>Caroline Zhang // Design Portfolio</title>
+    <link rel="icon" type="image/x-icon" href="assets/images/favicon.png" />
     <meta
       name="description"
-      content="When writing a meta description, keep it between 140 and 160 characters so Google can display your entire message. Don’t forget to include your keyword!"
+      content="Work portfolio for Vancouver-based graphic design student Caroline Zhang featuring branding and illustration pieces."
     />
     <meta charset="utf-8" />
     <meta http-equiv="refresh" content="5; url=work.html" />
@@ -37,9 +38,7 @@
       </div>
       <div class="holding-page-footer">
         <p class="holding-page-copyright">
-          &copy; 2020-2024. Hand crafted with
-          <span class="heart">❤</span>
-          by James Neufeld.
+          &copy; 2024-2026. Coded frantically by yours truly.
         </p>
       </div>
     </div>
