--- a/project-3.html
+++ b/project-3.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <title>Caroline Zhang // Design Portfolio</title>
+    <link rel="icon" type="image/x-icon" href="assets/images/favicon.png" />
     <meta
       name="description"
       content="Work portfolio for Vancouver-based graphic design student Caroline Zhang featuring branding and illustration pieces."
